# ecspresso

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.claude-plugin/: plugin.json
.github/workflows/: docs.yml  release.yml
bench/: bench-utils.ts  ecs-physics.bench.ts  ecs-physics3D.bench.ts  narrowphase.bench.ts  publish-micro.bench.ts  query-walk.bench.ts  spatial-hash-rebuild.bench.ts  spatial-hash3D-query.bench.ts  spatial-hash3D-rebuild.bench.ts
docs/: built-in-plugins.md  change-detection.md  performance.md
examples/: serve-examples.ts
examples/platformer/: platformer.ts
examples/platformer3d/: platformer3d.ts
examples/screens/: screens.ts
examples/space-invaders/: index.ts  types.ts
examples/stress-test/: bevy-version.ts  ecspresso-version.ts  phaser-version.ts  shared.ts  stress-test.ts
examples/stress-test/bevy/: Cargo.toml  build.ts
examples/stress-test/bevy/src/: lib.rs
examples/turret-defense/: index.ts  types.ts  utils.ts
examples/turret-shooter/: index.ts  types.ts
scripts/: build-changelog.ts  build-docs-index.ts  build-examples.ts
skills/ecspresso/: SKILL.md  api-reference.md  plugins.md
src/: auto-derived-change-tracking.test.ts  builder-type-inference.test.ts  command-buffer.test.ts  command-buffer.ts  ecspresso-builder.ts  ecspresso.ts  entity-manager.ts  event-bus.ts  query-cache.test.ts  query-cache.ts  query-match.ts  reactive-query-manager.ts  run-when-empty.test.ts  screen-scoped-entities.test.ts  system-builder.test.ts  system-builder.ts  type-utils.ts  typed-change-tracking.test.ts  types.ts
(+41 files in other folders)
