[package]
name = "bevy-stress-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
	"bevy_winit",
	"bevy_window",
	"bevy_render",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_sprite_render",
	"bevy_asset",
	"bevy_log",
	"webgl2",
] }
wasm-bindgen = "=0.2.106"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
